fix for Chrome and likely other browsers with overflow-x

--- a/MNTech/public/styles/main.css
+++ b/MNTech/public/styles/main.css
@@ -192,6 +192,10 @@ body {
 	overflow-x: hidden;
 }
 
+.body-wrap {
+	overflow-x: hidden;
+}
+
 .page,
 .global-navbar,
 footer {
